--- a/package.json
+++ b/package.json
@@ -6,5 +6,7 @@
   "license": "MIT",
   "devDependencies": {
     "lerna": "^2.5.1"
-  }
+  },
+  "private": true,
+  "workspaces": ["packages/*", "fiddle/*"]
 }
