--- a/package.json
+++ b/package.json
@@ -8,5 +8,5 @@
     "lerna": "^2.5.1"
   },
   "private": true,
-  "workspaces": ["packages/*", "fiddle/*"]
+  "workspaces": ["packages/universal-components/*", "fiddle/*"]
 }
