--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,9 @@
   "lerna": "2.5.1",
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "packages": ["packages/*", "fiddle/*"],
-  "version": "1.0.1"
+  "packages": [
+    "packages/*",
+    "fiddle/*"
+  ],
+  "version": "1.0.2"
 }
